@@ -1,28 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST st-0.4.1.tar.gz 32947 SHA256 ee2f93c6d8cd95a5ab47423eeebde4a474be470309ceee33fa3c7757eae2bf31 SHA512 06a75cdf7d22c64c1331276b0f58577c3c42c1c2edcb41a33a3c37f7b65bd284a3b006dd94e0dc081f42f028dd18b60f278e8b3f33a1cf6611b1398bff80df7d WHIRLPOOL ef59a069eaceaa8ed606913645525b5bf44828f5e82cc024f802a0f4bd1962a6df01253dd1787aacf0bdefb94071792551b3362a0d3e7326ac4cceb718fc8272
 DIST st-0.5.tar.gz 36710 SHA256 ae80ddfaf8146f7665772efc9b85e05e08be5087682a689ecdf71aa4d4bfdd4e SHA512 fb5d3b6dfb56f35c60a83164d0da2aef67d9fc23b81fdd7c26b9a618c92524a601db5fc4149a3a5054ca3306ecc80e104fa629ecb1516c047a726012237c83d5 WHIRLPOOL 90083bfaca02f7507e706c4d251736b300553e95c12640d948a8a5c273c5339b2080e34d54113a69e7cd0d083207634c645a55744c443efe77a2f7b40a82f9ad
-EBUILD st-0.4.1-r1.ebuild 1460 SHA256 be7fce74426aa675f47ef8fabde02bc543216e41714a306e9b7c8a4ea2393d61 SHA512 a0838cad7b086d8615984a9c5172490fe146f2d4d0c02d873bd5e1d2b5b1f2dba2cd8c17d7235dcab4904b94430cdeb156f20827c95f2293c8a69fcf7568dc68 WHIRLPOOL bd5d024e383c2f1ca443e90fdba25c50f616cbc7cd6a2c51aeaf662e9af7f498b9ff88582ac28c1348e15cc1404b1c9587322d0e6120b25c252326cd8df47098
-EBUILD st-0.4.1.ebuild 1357 SHA256 a133148866a26ad3387d83b4be3677abf2cf43db7c69b3d7b4dd66471eb53338 SHA512 5ce977e50d1a6269a1b10db3d85b373ab75ff24eca65b2c162db74f1f5896e73bf4e88611672af4654060289d74c84ffe57924982465b0fa7cad9d6128f8cd46 WHIRLPOOL 402eb480a5b02d4be0f4985c876f8562d86597296fce2412e44b626e1b8dc16a9f52dfe76b671c1e8ae3adc420693b712321c513410a61ee57afb2e0b9ce0d5e
-EBUILD st-0.5.ebuild 1454 SHA256 a1fb6f4652055bbe54bca043f8db69a8e92d62ed3ce55f00893e87402e8151aa SHA512 2a9a9c61a67ea07ee30eb7538be475d3dc78753530cb3ea16ddc0eb1c5c762a1a6269fe37a91e38b64243528e7a175adbd50608211213601b026b39d4c12b8a3 WHIRLPOOL 83b73990cb76c3d341411ac0bfcab535f3bd453d51904e8f77ee5fc2fabc2ba77b04ec2e85ad4fbfadc458e11f0bf8bbda27b36a4e9f527525c952db64e44112
-EBUILD st-9999.ebuild 1542 SHA256 fdaf561dac61e9ad228f91edc621f82e18595af7fc3c7cd2ef81494ff0a3585a SHA512 ca0b5b8367463b5b84c88e8c8547f0e4fe01e03744b020783d7ec05a028f95e6649825c3306a0523b5e18da36e23cecbc9a008d016ac736da502cdb3b4ebdc25 WHIRLPOOL 61ece856f2f5c474aa8d3cfcdb7874a250935f705aee79d3e0199aa2dec54a38ebbbbb30de1adbc2012658bfdb939f65cbda57adb098ec379787503187be6fd0
-MISC ChangeLog 2909 SHA256 b2dbeb77c3c434016ee736e9080fd6a59c691e3fb90618028105ae79cee8829e SHA512 5bd895b1c9dd20aea1ac803473bad8075bad472a96eb64bfcfd0eeb12810f2c7dfa75644755437c6d47c2045976b16797132a2d1f43422cb66984a7ddc684419 WHIRLPOOL 4d427eeb31934d486f59eedc28331e1b6ddca787eb274d074af8111086d33be045b02288285a0074cd37b9e702067469b85287286e244a2e6f84d6b69af06fc0
+EBUILD st-0.5.ebuild 1468 SHA256 88fdd2739d171065680d6c33c3ee2903f01bc77c1c2d58f56576c4fb65ebdd77 SHA512 968d2781d63ba164889c21f79809e8d174603a4c85bc1facf8e36882ac61c6c2c2fe653894b1da264482aedb41b7bc96b4e79d6571832af248568fc4a26dde5c WHIRLPOOL f44b3ee92250bb69d9396d86bb2445fc735f73932c7e3e1f78e78d90840655deb49ed09a30b1685de00a3a437e53b6f34cb202d388400ffd4564a178e77ed259
+EBUILD st-9999.ebuild 1556 SHA256 2e6ee0900cf9a6af98da985d419351cd86d0332bb7d88a967f68f5180ff86c0b SHA512 83f094973ecf2dba7508deb7438850cb2641c571ee5c135d33c324c6ff70ac74def3e72d9fb4e85f7471f363155dea4deea10a7449fe8438013fa2c0c34bd311 WHIRLPOOL 5de21d5847715601fc15702449fa8290b24cd382bc7075a43ff9bea788f409a335c48b890925443881a92473d7034381e76a57515c189cbec157fc783e3b49e9
+MISC ChangeLog 3065 SHA256 3415ba2e6882329afe536157db4146ddff6c7380d3a15e1be8e78f1567a8545c SHA512 16e3f17827953f97762281cea0131138a1feb938fcec4f41567ed2b734fe088c50493ba29e3de9b44d8d090909606b484dd66ed77af5e05600721ee428b32978 WHIRLPOOL e822a51794b695e02c9849861455894b6b10b2ff14ceec6df7b63a14b5c09a9832ff533366d4c0e3fe5c1b2326960d8e980e05cdbd6139933e55229010efbe8e
 MISC metadata.xml 223 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d SHA512 c9f6a48b2aa05afdf73b8bd824c65480d76e54b659ca39928398c66f764d34faf186255d8aea034737424a962cf35151b610d078a01f8193b027c63e1e3c51b5 WHIRLPOOL 1ce20c98a7e177b8f510ef41f3935b0db5e04b2ecf465a683b2f2515f6a3043c33e6e9efc87f5aaaf59b2ed9be376d9d16bc8beff66b11aaa50ea899bfdc1f62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUNlHAAAoJELp701BxlEWfXbYP/1QIFBitlWOBSrnuWDKd2oPq
-OIpRoVpFOxXDa1xV/a0m+fm4QmACEBqzUl3Xgrty1+8fZMgx+olZ/Bmvc0RiCP89
-4UqrIQ/tTLuVHThw9uhwph9UremjTq6FBPv8yj8WONizaacFSE6ImfUA87nv7biT
-UUMKl0yBI9f1t7r7Up0xqSWk1EVi9tjbYIQFJLgbXF1Qi1vtqKgSwiiuuCidQNS6
-Hu0qmH20zIUpBZcfNFA9jINA2cuaag9KFj/+Wxy2FNiUpbEY+Q9e/nfiTWEEImse
-FJ9dzrX2ZNVF+FTBZRAaO+sZwKzI+db3uWCS+sWAEPWCSGb3ceRZmGkOiUlU8hSr
-wBViWB0ZuQNPbU5HdwX1SwYuTHYk4RzgXSnnQKfsA8GMK7wPgNeZq/7Hze/giHfI
-HInHLDGmMxJxJcyUP7B5pwKNf00yjCZXwndyqdRwn5n8F++SWShutXytvPpWGLi8
-uwQLpJHDxOd9YDQ4hurEE07O9iUSfRaoZiTlJBZ9F2CjBNHENJXpWTa2oBwLZ/zY
-B0nf3vEHSuTYwwV3aVULgDSOmJ6cRSaCpUKHVEi1Kd4m8ARTVSblYcSjYrR/2Jdf
-SMaMPBiqYoO6AnTNdcJLkLVoVAmEKiO4uznPCr/mB6a1onPR16RrJcFEwdvJ2sHd
-oSbKXrvQDz3FyTL+c1Bn
-=qGWM
+iL4EAREIAGYFAlUBn7RfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDY3QjA4MzdGODg1NUMxMjIzNUQ0MDgxNzky
+N0FERDBDNjJFRUYwOTAACgkQknrdDGLu8JCDrAD9GqJjP/ogsYJwMQUNuv1Li1Id
+4decTwWPoIA7dO1FIOoBAIILD5dkEU4RKsqBSLoD9p1d2Tjn9aoGr1mQU54eb67G
+=5hpv
 -----END PGP SIGNATURE-----
